# PRL

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_platform_catalog.py  0002_saas_users_multi_company.py  0003_google_sso_identity.py  0004_document_intake_ocr.py  0005_platform_user_access_admin.py  0006_granular_permission_grants.py  0007_worker_cae_and_intake_scope.py  0008_worker_imports_assignments_platforms.py  0009_auth_login_signup_email_verification.py  0010_document_platform_expiry.py  0011_platform_structure_mapping.py  0012_platform_rpa_contracts.py  0013_platform_review_schedules.py  0014_platform_review_runs.py  0015_worker_identifier_unique.py  0016_platform_write_paths.py  0017_platform_observed_state.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: audit.py  auth.py  companies.py  dashboard.py  dependencies.py  document_intake.py  documents.py  exchange.py  health.py  platform_authorizations.py  platform_contracts.py  platform_maps.py  platforms.py  saas.py  (+11 more)
backend/tests/: conftest.py  test_arm_operational_data.py  test_assisted_platform_browser_context.py  test_auth.py  test_company_prl_archive_import.py  test_config.py  test_connectors.py  test_health.py  test_mvp_api.py  test_platform_catalog.py  test_platform_current_accounts_sync.py  test_platform_mapping.py  test_platform_observations.py  test_platform_operation_catalog.py  test_platform_validation_surfaces.py  test_rpa_assisted_browser.py  test_rpa_gateway.py
(+194 files in other folders)
