[project]
name = "iprl-cae-hub-backend"
version = "0.1.0"
description = "Backend FastAPI para IPRL/CAE Hub"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "PyJWT[crypto]>=2.10",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pillow>=11.0",
    "playwright>=1.48",
    "psycopg[binary]>=3.2",
    "pypdf>=5.0",
    "pytesseract>=0.3.13",
    "PyYAML>=6.0",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = [".", ".."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
ignore_missing_imports = true
